Sun Nov 10 17:17:44 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/config.c src/tds/convert.c:
	* src/tds/iconv.c src/tds/login.c src/tds/token.c:
	- remove various FIXME in code

Sun Nov 10 13:46:55 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/t0001.c:
	- fill buffer for see other possible errors

Sun Nov 10 13:38:58 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/config.c src/tds/query.c  src/tds/token.c:
	- fix some FIXME in code
	* src/tds/read.c src/tds/write.c:
	- use chunk conversion for unicode<->ascii to avoid memory problems

Sun Nov 10 11:52:28 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/server/login.c src/tds/iconv.c src/tds/token.c:
	- unicode2ascii and tds_get_string never terminate output strings
	- string in row are not zero terminated. this safe a bit of unused 
	  space

Fri Nov  8 15:22:51 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt:
	- Update status of dbcolutype() and BCP_SETL().

Fri Nov  8 20:06:36 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/apps/tsql.c src/ctlib/ct.c:
	* src/dblib/bcp.c src/dblib/dblib.c src/odbc/odbc.c:
	* src/tds/mem.c src/tds/query.c src/tds/token.c:
	- put blob related fields in a new TDSBLOBINFO structure and
	  put this structure in current_row.

Fri Nov  8 17:56:16 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/odbc/convert_tds2sql.c src/tds/convert.c:
	* src/tds/query.c src/tds/unittests/t0008.c:
	- support for numeric if 256 bit

Fri Nov  8 16:54:49 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/read.c src/tds/token.c:
	- removed tds_get_ntstring, unused
	* src/odbc/connectparams.c: rewritten (code now more readable)
	* src/odbc/native.c: improve
	* src/server/login.c: small comment added
	* src/tds/query.c: improve for code reuse

Fri Nov  8 08:51:00 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>